v0.4.13 Fix tooltip spacing

--- a/projects/budgetkey-ng2-components/src/styles/tooltip.less
+++ b/projects/budgetkey-ng2-components/src/styles/tooltip.less
@@ -21,6 +21,7 @@
     display: inline;
     text-decoration-line: underline;
     text-decoration-style: dashed;
+    text-underline-offset: 2px;
 
     span.bk-tooltip {
         position: absolute;
